[ IzSound x.y.z ] (xxxx.yy.zz) release-x-y-z

2004.01.17 (Julien Ponge):
* Libtool versioning: moved from -release to -version-info. The versioning
  starts at 0:0:0 as of the 0.2.0 release.

2004.01.16 (Julien Ponge):
* Addition of Karl Pitrich's WhiteNoise DSP unit.

2004.01.11 (Julien Ponge):
* MadDecoder: a lot of enhancements thanks to Karl Pitrich. Now, the DSP unit
  does no longer need to make a scan of the file to decode to grab the length.
  The unit also recognizes Xing headers and the file is mmap'ed.
* Volume: Karl Pitrich contributed some code to enable some channel balancing
  operations.
* Documentation minor updates.
* MadDecoder is now licensed under the terms of the GNU GPL license because of
  the 3rd-party code used to implement it. The unit compilation can be disabled
  if you don't want it though.
* The IzSound license is now a 3 clauses BSD-style license instead of a 2
  clauses one. This is mainly to protect the author and its contributors names.

2004.01.07 (Julien Ponge):
* MadDecoder: error handling fix when opening a file.
* Flanger: a '#include <functional>' was missing in the header file and caused
  compilation errors with GCC 2.9x.

[ IzSound 0.1.0 ] (2004.01.05) release-0-1-0

2004.01.05 (Julien Ponge):
* New IzSound release, leaving the alpha status for the beta status.

2004.01.03 (Julien Ponge):
* MadDecoder: all the methods are now implemented. However, seeking and getting
  the file duration implies that the file is entirely scanned when beeing
  opened. This is not optimal, but it works.
* Addition of a NEWS file in the source distribution.

2004.01.02 (Julien Ponge):
* New year copyright updates.

2003.12.30 (Julien Ponge):
* MadDecoder: stop() method fix so that it properly works.
* MadDecoder: getCurrentTime() is now implemented.

2003.12.29 (Julien Ponge):
* OggFileDecoder: the decoder goes in 'STOP' mode when the end of the file is
  reached.
* IzSound manual: an appendix for the third-party codes has been added.