@@ -118,26 +118,6 @@ public:
 
 };
 
-/**
- * Binary function that mixes 2 samples against factors.
- */
-struct Mixer_OF
-{
-  double f1;
-  double f2;
-
-  Mixer_OF(const double &a, const double &b)
-  {
-    f1 = a;
-    f2 = b;
-  }
-
-  double operator() (const double &x, const double &y)
-  {
-    return (x * f1) + (y * f2);
-  }
-};
-
 }
 
 #endif
