@@ -3,6 +3,9 @@
 2004.01.17 (Julien Ponge):
 * Libtool versioning: moved from -release to -version-info. The versioning
   starts at 0:0:0 as of the 0.2.0 release.
+* The (deliberately) undocumented classes / structs won't be included in the
+  Doxygen-generated documentation anymore.
+* CrossFader: moved the Mixer_OF functor from the .h file to the .cpp file.
 
 2004.01.16 (Julien Ponge):
 * Addition of Karl Pitrich's WhiteNoise DSP unit.
